2005-04-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (tkjabber::cleanup): Modified the cleanup to check
	for the existence of the muc variable. Sometimes it has already
	been cleaned up.

2004-04-13  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: removed askleo and babelfish bindings from private chat
	windows. The private chat window now uses nick colors too (doesn't
	update them properly, though). Added 'help' item to the help menu.
	Added visibility option for away/online/dnd 'availability' messages.
	Added user idle detection in win2k+ to do auto-away/xa, configurable in
	the preferences menu (disabled by default). This requires an additional
	(optional) extension (idle) to be available.

2005-04-12  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Removed explicit placement from geometry
	settings. It's the windowmanager's job to place new windows.

2004-04-11  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: one to one chat added; /msg now emits '-type normal';
        /chat <nick> msg will open a chat window, as will double clicking on
        the nick in the online users list; user info is now a right click
        action.
        * tkchat.tcl: fix new message notify for private chats; fix /me in
        private chats.

2005-04-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added some error checking during some server downtime.

2005-03-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Bug #1156611 fixed. It seems jabberlib changed to
	interface for the send_iq command.
	* tkchat.tcl: Fixed a problem with the SASL authentication code.
	* tkchat.tcl: Improved handling of roster status change messages.

2005-03-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: bug #1153603 - fix error reporting on network errors.
	* tkchat.tcl: bug #1085174 - fail more gracefully if the history
	logs are unavailable. Make the history get use async http.