@@ -83,7 +83,7 @@ if {$tcl_platform(platform) eq "windows"
 package forget app-tkchat	;# Workaround until I can convince people
 ;# that apps are not packages.	:)  DGP
 package provide app-tkchat \
-    [regexp -inline {\d+(?:\.\d+)?} {$Revision: 1.276 $}]
+    [regexp -inline {\d+(?:\.\d+)?} {$Revision: 1.277 $}]
 
 # Maybe exec a user defined preload script at startup (to set Tk options,
 # for example.
@@ -115,7 +115,7 @@ namespace eval ::tkchat {
     variable HOST http://mini.net
 
     variable HEADUrl {http://cvs.sourceforge.net/viewcvs.py/tcllib/tclapps/apps/tkchat/tkchat.tcl?rev=HEAD}
-    variable rcsid   {$Id: tkchat.tcl,v 1.276 2005/04/23 17:57:45 patthoyts Exp $}
+    variable rcsid   {$Id: tkchat.tcl,v 1.277 2005/04/24 23:26:41 patthoyts Exp $}
 
     variable MSGS
     set MSGS(entered) [list \
@@ -1118,6 +1118,7 @@ proc ::tkchat::IncrMessageCounter {} {
         set title "$MessageCounter - $chatWindowTitle"
         wm title . $title
         wm iconname . $title
+        WinicoUpdate
     }
 }
 proc ::tkchat::ResetMessageCounter {} {
@@ -1127,6 +1128,7 @@ proc ::tkchat::ResetMessageCounter {} {
     set title $chatWindowTitle
     wm title . $title
     wm iconname . $title
+    WinicoUpdate
 }
 
 proc ::tkchat::InsertTimestamp {w nick {mark end} {seconds 0} {tags ""}} {
@@ -5501,8 +5503,9 @@ proc ::tkchat::WinicoInit {} {
                 -text [wm title .] \
                 -callback [list [namespace origin WinicoCallback] %m %i]
             bind . <Destroy> [namespace origin WinicoCleanup]
-            Hook add chat [namespace origin WinicoChatHook]
         }
+    } else {
+        proc ::tkchat::WinicoUpdate {} {}
     }
 }
 
@@ -5517,7 +5520,6 @@ proc ::tkchat::WinicoCallback {msg icn} {
             if {[wm state .] == "withdrawn"} {
                 wm deiconify .
                 ResetMessageCounter
-                WinicoChatHook
             } else {
                 wm withdraw .
             }
@@ -5525,7 +5527,7 @@ proc ::tkchat::WinicoCallback {msg icn} {
     }
 }
 
-proc ::tkchat::WinicoChatHook {} {
+proc ::tkchat::WinicoUpdate {} {
     variable MessageCounter
     variable TaskbarIcon
     if {$MessageCounter > 0} {
