@@ -1,3 +1,9 @@
+2005-04-25  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Applied patch #1187190 by Daniel South which fixes
+	updating the system tray icon when the application regains focus
+	on windows.
+
 2005-04-23  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl (tkjabber::cleanup): Modified the cleanup to check
